# UniDocParser

./: .gitignore  Dockerfile  Onboarding.md  README.md  docker-compose.debug.yml  docker-compose.yml  extractor_test.py  package-lock.json  pipeline_2_res_dummy_scanned.pdf.jsonl  pipeline_2_res_dummy_scanned.pdf.md  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
backend/: main.py
backend/core/: config.py  ft_llm_format_config.py  ft_vlm_fig2tab_config.py  ft_vlm_format_config.py  interfaces.py  model_maager.py  prompt_config.py  types.py  unsloth_vlm_fig2tab_config.py  unsloth_vlm_format_config.py  vlm_fig2tab_config.py  vlm_format_config.py  vlm_ollama_config.py
backend/models/: extraction_models.py
backend/pipeline/: context.py  doc_parse_handler.py  doc_parse_service.py  doc_parser_pipeline.py  extractor.py  pdf_handler.py  pdf_service.py  retrieval_handler.py  step.py  utils.py
backend/pipeline/model/: schemas.py  (+1 more)
backend/routes/: extraction_routes.py
backend/services/: _pipeline.py  default_impls.py  element_extraction.py  element_extractor.py  file_handler.py  image_extraction.py  image_extractor.py  model_manager.py  output_formatter.py  pdf_extractor.py  pipeline.py
backend/utils/: helpers.py  logger.py  trackers.py  unstructured_extractor_helpers.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css
frontend/templates/: index.html  index_c.html
frontend_b/templates/: index.html  index_b.html
testhtml/: test_json_viewer.html  test_json_viewer.js
(+55 files in other folders)
