[project]
name = "unidocparser"
version = "0.1.0"
description = ""
authors = [
    {name = "deduu",email = "dedy.ariansyah1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "ultralytics (>=8.3.96,<9.0.0)",
    "supervision (>=0.25.1,<0.26.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
